// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectVoiceSearch getWidgetSearchParameters should add the refinement according to the UI state provided 1`] = `
SearchParameters {
  "advancedSyntax": undefined,
  "allowTyposOnNumericTokens": undefined,
  "analytics": undefined,
  "analyticsTags": undefined,
  "aroundLatLng": undefined,
  "aroundLatLngViaIP": undefined,
  "aroundPrecision": undefined,
  "aroundRadius": undefined,
  "attributesToHighlight": undefined,
  "attributesToRetrieve": undefined,
  "attributesToSnippet": undefined,
  "disableExactOnAttributes": undefined,
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "distinct": undefined,
  "enableExactOnSingleWordQuery": undefined,
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "getRankingInfo": undefined,
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "highlightPostTag": undefined,
  "highlightPreTag": undefined,
  "hitsPerPage": undefined,
  "ignorePlurals": undefined,
  "index": "",
  "insideBoundingBox": undefined,
  "insidePolygon": undefined,
  "length": undefined,
  "maxValuesPerFacet": undefined,
  "minProximity": undefined,
  "minWordSizefor1Typo": undefined,
  "minWordSizefor2Typos": undefined,
  "minimumAroundRadius": undefined,
  "numericFilters": undefined,
  "numericRefinements": Object {},
  "offset": undefined,
  "optionalFacetFilters": undefined,
  "optionalTagFilters": undefined,
  "optionalWords": undefined,
  "page": 0,
  "query": "my search",
  "queryType": undefined,
  "removeWordsIfNoResults": undefined,
  "replaceSynonymsInHighlight": undefined,
  "restrictSearchableAttributes": undefined,
  "snippetEllipsisText": undefined,
  "synonyms": undefined,
  "tagFilters": undefined,
  "tagRefinements": Array [],
  "typoTolerance": undefined,
}
`;

exports[`connectVoiceSearch getWidgetSearchParameters should enforce the default value if the ui state is empty 1`] = `
SearchParameters {
  "advancedSyntax": undefined,
  "allowTyposOnNumericTokens": undefined,
  "analytics": undefined,
  "analyticsTags": undefined,
  "aroundLatLng": undefined,
  "aroundLatLngViaIP": undefined,
  "aroundPrecision": undefined,
  "aroundRadius": undefined,
  "attributesToHighlight": undefined,
  "attributesToRetrieve": undefined,
  "attributesToSnippet": undefined,
  "disableExactOnAttributes": undefined,
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "distinct": undefined,
  "enableExactOnSingleWordQuery": undefined,
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "getRankingInfo": undefined,
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "highlightPostTag": undefined,
  "highlightPreTag": undefined,
  "hitsPerPage": undefined,
  "ignorePlurals": undefined,
  "index": "",
  "insideBoundingBox": undefined,
  "insidePolygon": undefined,
  "length": undefined,
  "maxValuesPerFacet": undefined,
  "minProximity": undefined,
  "minWordSizefor1Typo": undefined,
  "minWordSizefor2Typos": undefined,
  "minimumAroundRadius": undefined,
  "numericFilters": undefined,
  "numericRefinements": Object {},
  "offset": undefined,
  "optionalFacetFilters": undefined,
  "optionalTagFilters": undefined,
  "optionalWords": undefined,
  "page": 0,
  "query": "",
  "queryType": undefined,
  "removeWordsIfNoResults": undefined,
  "replaceSynonymsInHighlight": undefined,
  "restrictSearchableAttributes": undefined,
  "snippetEllipsisText": undefined,
  "synonyms": undefined,
  "tagFilters": undefined,
  "tagRefinements": Array [],
  "typoTolerance": undefined,
}
`;
